[css-sizing] Adding border and padding to fill-available width

The "fill-available" size is defined as the containing block's size less
the box's border and padding size. However, when used for
min-width we should ensure we don't get negative values as
result of logical width computation.

 http://www.w3.org/TR/css-sizing-3/#fill-available-sizing

This patch ensure fill-available value computed value will be always
greater than box's border and padding width.

BUG=613354,616059

Review-Url: https://codereview.chromium.org/2022033003
Cr-Commit-Position: refs/heads/master@{#399677}

Former-commit-id: f7b659ec21315a34e7bb462283d3f007c16a3b7c